# sdbus-cpp

./: CMakeLists.txt
daemon/: CMakeLists.txt  collector.cpp
include/sdbus-c++/: Deprecated.h
src/: Deprecated.cpp  Object.cpp
